vlib/v/parser/tests/invalid_struct_decl_with_attr_script_err.vv
test_var = 'Test'

@[table: 'users']
struct User {
	name string
}
